# hardware-synth

./: .gitignore  CMakeLists.txt  README.md  compile.bat  compileAndLaunch.bat  copyToDAW.bat  launch.bat
resource/: editor.uidesc
source/: Logger.h  cids.h  entry.cpp  params.h  version.h
source/Hardware/: AsioInterfaces.cpp  AsioInterfaces.h  AudioInputs.h  HardwareSynthesizer.cpp  HardwareSynthesizer.h  MIDIDevices.cpp  MIDIDevices.h  MIDIScheduler.cpp
source/Processor/: Processor.cpp  Processor.h
source/Processor/Asio/: AsioConverters.cpp  AsioConverters.h  AsioInterface.cpp  AsioInterface.h  RingBufferFloat.cpp  RingBufferFloat.h
source/Processor/HardwareSynthesizer/: HardwareSynthesizer.cpp  MIDIDevices.cpp  MIDIScheduler.cpp  MIDIScheduler.h
source/UI/: Controller.cpp  Controller.h
source/UI/Panel/: Panel.cpp  Panel.h  PanelManager.cpp  PanelManager.h
source/UI/constants/: colors.cpp  colors.h  includes.h
source/utils/: includes.h
source/utils/setTimeout/: setTimeout.cpp  setTimeout.h
